@@ -11,6 +11,7 @@ import java.util.List;
 
 import org.hl7.fhir.dstu3.model.Bundle;
 import org.hl7.fhir.dstu3.model.DocumentReference;
+import org.hl7.fhir.dstu3.model.Observation;
 import org.hl7.fhir.dstu3.model.Organization;
 import org.hl7.fhir.dstu3.model.Practitioner;
 import org.hl7.fhir.dstu3.model.PractitionerRole;
@@ -26,6 +27,7 @@ import org.springframework.test.annotation.DirtiesContext;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import lombok.SneakyThrows;
+import uk.nhs.adaptors.common.util.fhir.FhirParser;
 import uk.nhs.adaptors.pss.translator.exception.BundleMappingException;
 
 @SpringBootTest(webEnvironment = RANDOM_PORT)
@@ -40,6 +42,21 @@ public class BundleMapperServiceIT {
     @Autowired
     private BundleMapperService bundleMapperService;
 
+    @Autowired
+    private FhirParser fhirParser;
+
+    @Test
+    public void When_MappingBundle_With_ObservationsThatHaveDuplicateCodeableConcepts_Expect_ObservationRemoved()
+        throws BundleMappingException {
+
+        var ehrMessage = unmarshallEhrExtractFromFile("ehr-document-and-no-organisations.xml");
+
+        var bundle = bundleMapperService.mapToBundle(ehrMessage, LOSING_PRACTICE_ODS_CODE, new ArrayList<>());
+        var observations = extractObservationsFromBundle(bundle);
+
+        assertThat(observations.size()).isOne();
+    }
+
     @Test
     public void When_MappingBundle_With_RepresentedOrganisation_Expect_OrganisationMapped() throws BundleMappingException {
         var ehrMessage = unmarshallEhrExtractFromFile("ehr-single-represented-organisation.xml");
@@ -53,9 +70,9 @@ public class BundleMapperServiceIT {
         assertThat(practitioners.size()).isOne();
         assertThat(practitionerRoles.size()).isOne();
 
-        var organisationId = organisations.get(0).getId();
-        var practitionerId = practitioners.get(0).getId();
-        var practitionerRole = practitionerRoles.get(0);
+        var organisationId = organisations.getFirst().getId();
+        var practitionerId = practitioners.getFirst().getId();
+        var practitionerRole = practitionerRoles.getFirst();
 
         assertThat(practitionerRole.getPractitioner().getReferenceElement().getIdPart()).isEqualTo(practitionerId);
         assertThat(practitionerRole.getOrganization().getReferenceElement().getIdPart()).isEqualTo(organisationId);
@@ -74,9 +91,9 @@ public class BundleMapperServiceIT {
         assertThat(practitioners.size()).isEqualTo(2);
         assertThat(practitionerRoles.size()).isEqualTo(2);
 
-        var organisationId = organisations.get(0).getId();
+        var organisationId = organisations.getFirst().getId();
 
-        assertThat(practitionerRoles.get(0).getOrganization().getReferenceElement().getIdPart())
+        assertThat(practitionerRoles.getFirst().getOrganization().getReferenceElement().getIdPart())
             .isEqualTo(organisationId);
 
         assertThat(practitionerRoles.get(1).getOrganization().getReferenceElement().getIdPart())
@@ -98,10 +115,10 @@ public class BundleMapperServiceIT {
         assertThat(practitionerRoles.size()).isZero();
         assertThat(documentReferences.size()).isOne();
 
-        var organisationId = organisations.get(0)
+        var organisationId = organisations.getFirst()
             .getId();
 
-        var custodianId = documentReferences.get(0)
+        var custodianId = documentReferences.getFirst()
             .getCustodian()
             .getResource()
             .getIdElement()
@@ -142,10 +159,10 @@ public class BundleMapperServiceIT {
         assertThat(practitionerRoles.size()).isOne();
         assertThat(documentReferences.size()).isOne();
 
-        var organisationId = organisations.get(0)
+        var organisationId = organisations.getFirst()
             .getId();
 
-        var custodianId = documentReferences.get(0)
+        var custodianId = documentReferences.getFirst()
             .getCustodian()
             .getResource()
             .getIdElement()
@@ -153,10 +170,10 @@ public class BundleMapperServiceIT {
 
         assertThat(custodianId).isEqualTo(organisationId);
 
-        assertThat(practitionerRoles.get(0).getOrganization().getReferenceElement().getIdPart())
+        assertThat(practitionerRoles.getFirst().getOrganization().getReferenceElement().getIdPart())
             .isEqualTo(organisationId);
-        assertThat(practitionerRoles.get(0).getPractitioner().getReferenceElement().getIdPart())
-            .isEqualTo(practitioners.get(0).getId());
+        assertThat(practitionerRoles.getFirst().getPractitioner().getReferenceElement().getIdPart())
+            .isEqualTo(practitioners.getFirst().getId());
     }
 
     @SneakyThrows
@@ -193,6 +210,14 @@ public class BundleMapperServiceIT {
             .map(Bundle.BundleEntryComponent::getResource)
             .filter(resource -> resource.getResourceType().equals(ResourceType.DocumentReference))
             .map(DocumentReference.class::cast)
+            .toList();
+    }
+
+    private List<Observation> extractObservationsFromBundle(Bundle bundle) {
+        return bundle.getEntry().stream()
+            .map(Bundle.BundleEntryComponent::getResource)
+            .filter(resource -> resource.getResourceType().equals(ResourceType.Observation))
+            .map(Observation.class::cast)
             .toList();
     }
 }
