@@ -73,7 +73,7 @@ public class AgentDirectoryMapper {
         var agentPerson = agent.getAgentPerson();
         var agentOrganization = agent.getAgentOrganization();
         var representedOrganization = agent.getRepresentedOrganization();
-        var resourceId = agent.getId().get(0).getRoot();
+        var resourceId = agent.getId().getFirst().getRoot();
         var gpNumber = agent.getId().size() > 1 ? agent.getId().get(1).getExtension() : "";
 
         if (agentPerson != null && representedOrganization != null) {
@@ -114,11 +114,15 @@ public class AgentDirectoryMapper {
 
     private List<HumanName> getPractitionerName(PN name) {
         var nameList = new ArrayList<HumanName>();
-        var humanName = new HumanName();
+        var humanName = new HumanName().setUse(NameUse.OFFICIAL);
+        nameList.add(humanName);
 
-        humanName
-            .setUse(NameUse.OFFICIAL)
-            .setFamily(getPractitionerFamily(name.getFamily()));
+        if (name == null) {
+            humanName.setFamily(UNKNOWN);
+            return nameList;
+        }
+
+        humanName.setFamily(getPractitionerFamily(name.getFamily()));
 
         var given = getPractitionerGiven(name.getGiven());
         if (given != null) {
@@ -129,8 +133,6 @@ public class AgentDirectoryMapper {
         if (prefix != null) {
             humanName.getPrefix().add(prefix);
         }
-
-        nameList.add(humanName);
 
         return nameList;
     }
@@ -198,7 +200,7 @@ public class AgentDirectoryMapper {
 
     private ContactPoint getOrganizationTelecom(List<TEL> telecomList) {
         if (!telecomList.isEmpty()) {
-            return TelecomUtil.mapTelecom(telecomList.get(0));
+            return TelecomUtil.mapTelecom(telecomList.getFirst());
         }
 
         return null;
@@ -206,7 +208,7 @@ public class AgentDirectoryMapper {
 
     private Address getOrganizationAddress(List<AD> addressList) {
         if (!addressList.isEmpty()) {
-            return AddressUtil.mapAddress(addressList.get(0));
+            return AddressUtil.mapAddress(addressList.getFirst());
         }
 
         return null;
