@@ -23,8 +23,6 @@ import static org.springframework.util.ResourceUtils.getFile;
 import static uk.nhs.adaptors.pss.translator.util.XmlUnmarshallUtil.unmarshallFile;
 import static uk.nhs.adaptors.pss.translator.util.XmlUnmarshallUtil.unmarshallString;
 
-import java.util.List;
-
 public class AgentDirectoryMapperTest {
 
     private static final String XML_RESOURCES_BASE = "xml/AgentDirectory/";
@@ -42,7 +40,7 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryWithMultipleAgents() {
         var agentDirectory = unmarshallAgentDirectoryElement("multiple_agents_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         // asserts that for the 3 varying Agents in the input, that there are correctly 5 mapped resources output
         assertEquals(FIVE_RESOURCES_MAPPED, mappedAgents.size());
@@ -52,25 +50,25 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryWithAgentPersonAndRepresentedOrganizationNoCode() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_person_and_represented_org_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(THREE_RESOURCES_MAPPED, mappedAgents.size());
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
 
         var organization = (Organization) mappedAgents.get(1);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("TEMPLE SOWERBY MEDICAL PRACTICE", organization.getName());
         assertThat(organization.getType()).isEmpty();
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-PR", practitionerRole.getId());
-        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().getFirst().getValue());
         assertEquals("Practitioner/94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitionerRole.getPractitioner().getReference());
         assertEquals("Organization/94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", practitionerRole.getOrganization().getReference());
         assertThat(practitionerRole.getCode()).isEmpty();
@@ -81,37 +79,37 @@ public class AgentDirectoryMapperTest {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_with_general_practitioner_number.xml");
 
         var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
 
         assertEquals("E7E7B550-09EF-BE85-C20F-34598014166C", practitioner.getId());
         assertThat(practitioner.getIdentifier()).isNotEmpty();
-        assertEquals("https://fhir.hl7.org.uk/Id/gmp-number", practitioner.getIdentifier().get(0).getSystem());
-        assertEquals("12345", practitioner.getIdentifier().get(0).getValue());
+        assertEquals("https://fhir.hl7.org.uk/Id/gmp-number", practitioner.getIdentifier().getFirst().getSystem());
+        assertEquals("12345", practitioner.getIdentifier().getFirst().getValue());
     }
 
     @Test
     public void mapAgentDirectoryWithAgentPersonAndRepresentedOrganizationWithOriginalText() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_person_and_represented_org_with_original_text_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(THREE_RESOURCES_MAPPED, mappedAgents.size());
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
 
         var organization = (Organization) mappedAgents.get(1);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("TEMPLE SOWERBY MEDICAL PRACTICE", organization.getName());
         assertThat(organization.getType()).isEmpty();
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-PR", practitionerRole.getId());
-        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().getFirst().getValue());
         assertEquals("Practitioner/94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitionerRole.getPractitioner().getReference());
         assertEquals("Organization/94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", practitionerRole.getOrganization().getReference());
         assertEquals("Clerical Worker", practitionerRole.getCodeFirstRep().getText());
@@ -121,41 +119,41 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryWithAgentPersonAndRepresentedOrganizationWithDisplayName() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_person_and_represented_org_with_display_name_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(THREE_RESOURCES_MAPPED, mappedAgents.size());
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
 
         var organization = (Organization) mappedAgents.get(1);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("TEMPLE SOWERBY MEDICAL PRACTICE", organization.getName());
         assertThat(organization.getType()).isEmpty();
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
         assertEquals("94F00D99-0601-4A8E-AD1D-1B564307B0A6-PR", practitionerRole.getId());
-        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_ROLE_META_PROFILE, practitionerRole.getMeta().getProfile().getFirst().getValue());
         assertEquals("Practitioner/94F00D99-0601-4A8E-AD1D-1B564307B0A6", practitionerRole.getPractitioner().getReference());
         assertEquals("Organization/94F00D99-0601-4A8E-AD1D-1B564307B0A6-ORG", practitionerRole.getOrganization().getReference());
-        assertEquals("General practice", practitionerRole.getCode().get(0).getCoding().get(0).getDisplay());
+        assertEquals("General practice", practitionerRole.getCode().getFirst().getCoding().getFirst().getDisplay());
     }
 
     @Test
     public void mapAgentDirectoryOnlyAgentPersonNoOptionalFields() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_person_only_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertThat(mappedAgents).hasSize(1);
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertEquals("95D00D99-0601-4A8E-AD1D-1B564307B0A6", practitioner.getId());
-        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().get(0).getValue());
+        assertEquals(PRACT_META_PROFILE, practitioner.getMeta().getProfile().getFirst().getValue());
         assertEquals(NameUse.OFFICIAL, practitioner.getNameFirstRep().getUse());
         assertEquals("Test", practitioner.getNameFirstRep().getFamily());
         assertThat(practitioner.getNameFirstRep().getGiven()).isEmpty();
@@ -163,17 +161,17 @@ public class AgentDirectoryMapperTest {
     }
 
     @Test
-    public void mapAgentDirectoryOnlyAgentPersonUnknownName() {
+    public void mapAgentDirectoryOnlyAgentPersonWithEmptyNameElement() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_person_only_no_name_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertThat(mappedAgents).hasSize(1);
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
 
         assertThat(practitioner.getId()).isEqualTo("95D00D99-0601-4A8E-AD1D-1B564307B0A6");
-        assertThat(practitioner.getMeta().getProfile().get(0).getValue()).isEqualTo(PRACT_META_PROFILE);
+        assertThat(practitioner.getMeta().getProfile().getFirst().getValue()).isEqualTo(PRACT_META_PROFILE);
         assertThat(practitioner.getNameFirstRep().getUse()).isEqualTo(NameUse.OFFICIAL);
         assertThat(practitioner.getNameFirstRep().getFamily()).isEqualTo("Unknown");
         assertThat(practitioner.getNameFirstRep().getGiven()).isEmpty();
@@ -181,33 +179,60 @@ public class AgentDirectoryMapperTest {
     }
 
     @Test
+    public void When_MappingAgentDirectoryWithAgentWithoutNameElement_Expect_ExpectFamilyNameIsSetToUnknown() {
+        var agentDirectoryXml = """
+            <agentDirectory xmlns="urn:hl7-org:v3" classCode="AGNT">
+                <part typeCode="PART">
+                    <Agent classCode="AGNT">
+                        <id root="6C8AC7E0-4D90-10C5-5FD3-F2C05C658E18" />
+                            <code code="125676002" codeSystem="2.16.840.1.113883.2.1.3.2.4.15" displayName="Person">
+                               <originalText>Other</originalText>
+                            </code>
+                        <agentPerson classCode="PSN" determinerCode="INSTANCE" />
+                    </Agent>
+                </part>
+            </agentDirectory>""";
+        var agentDirectory = unmarshallAgentDirectoryFromXmlString(agentDirectoryXml);
+
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
+
+        assertAll(
+            () -> assertThat(practitioner.getNameFirstRep().getUse()).isEqualTo(NameUse.OFFICIAL),
+            () -> assertThat(practitioner.getNameFirstRep().getFamily()).isEqualTo("Unknown"),
+            () -> assertThat(practitioner.getNameFirstRep().getGiven()).isEmpty(),
+            () -> assertThat(practitioner.getNameFirstRep().getPrefix()).isEmpty()
+        );
+    }
+
+    @Test
     public void mapAgentDirectoryOnlyAgentPersonFullName() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_person_only_full_name_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertThat(mappedAgents).hasSize(1);
 
-        var practitioner = (Practitioner) mappedAgents.get(0);
+        var practitioner = (Practitioner) mappedAgents.getFirst();
         assertThat(practitioner.getId()).isEqualTo("95D00D99-0601-4A8E-AD1D-1B564307B0A6");
-        assertThat(practitioner.getMeta().getProfile().get(0).getValue()).isEqualTo(PRACT_META_PROFILE);
+        assertThat(practitioner.getMeta().getProfile().getFirst().getValue()).isEqualTo(PRACT_META_PROFILE);
         assertThat(practitioner.getNameFirstRep().getUse()).isEqualTo(NameUse.OFFICIAL);
         assertThat(practitioner.getNameFirstRep().getFamily()).isEqualTo("Test");
-        assertThat(practitioner.getNameFirstRep().getGiven().get(0).getValue()).isEqualTo("NHS");
-        assertThat(practitioner.getNameFirstRep().getPrefix().get(0).getValue()).isEqualTo("Mr");
+        assertThat(practitioner.getNameFirstRep().getGiven().getFirst().getValue()).isEqualTo("NHS");
+        assertThat(practitioner.getNameFirstRep().getPrefix().getFirst().getValue()).isEqualTo("Mr");
     }
 
     @Test
     public void mapAgentDirectoryOnlyAgentOrganizationNoOptionalFields() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_only_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertThat(mappedAgents).hasSize(1);
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertThat(organization.getId()).isEqualTo("1D9BDC28-50AB-440D-B421-0E5E049526FA");
-        assertThat(organization.getMeta().getProfile().get(0).getValue()).isEqualTo(ORG_META_PROFILE);
+        assertThat(organization.getMeta().getProfile().getFirst().getValue()).isEqualTo(ORG_META_PROFILE);
         assertThat(organization.getName()).isEqualTo("The Health Centre");
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -218,13 +243,13 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryOnlyAgentOrganizationUnknownName() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_no_name_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertThat(mappedAgents).hasSize(1);
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertThat(organization.getId()).isEqualTo("1D9BDC28-50AB-440D-B421-0E5E049526FA");
-        assertThat(organization.getMeta().getProfile().get(0).getValue()).isEqualTo(ORG_META_PROFILE);
+        assertThat(organization.getMeta().getProfile().getFirst().getValue()).isEqualTo(ORG_META_PROFILE);
         assertThat(organization.getName()).isEqualTo("Unknown");
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -235,13 +260,13 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryOnlyAgentOrganizationWithValidIdentifier() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_valid_identifier_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertEquals(ORG_IDENTIFIER_SYSTEM, organization.getIdentifierFirstRep().getSystem());
         assertEquals("A81001", organization.getIdentifierFirstRep().getValue());
@@ -253,13 +278,13 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryOnlyAgentOrganizationWithInvalidIdentifier() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_invalid_identifier_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -270,13 +295,13 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryOnlyAgentOrganizationWithNonWPAddressAndTelecom() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_non_wp_address_and_telecom_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertTelecom(organization.getTelecomFirstRep(), "01234567890");
@@ -287,13 +312,13 @@ public class AgentDirectoryMapperTest {
     public void mapAgentDirectoryOnlyAgentOrganizationWithWPTelecom() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_wp_telecom_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertTelecom(organization.getTelecomFirstRep(), "01234567890");
@@ -304,13 +329,13 @@ public class AgentDirectoryMapperTest {
     public void  mapAgentDirectoryOnlyAgentOrganizationWithWPAddress() {
         var agentDirectory = unmarshallAgentDirectoryElement("agent_org_wp_address_example.xml");
 
-        List mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
+        var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         assertEquals(1, mappedAgents.size());
 
-        var organization = (Organization) mappedAgents.get(0);
+        var organization = (Organization) mappedAgents.getFirst();
         assertEquals("1D9BDC28-50AB-440D-B421-0E5E049526FA", organization.getId());
-        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().get(0).getValue());
+        assertEquals(ORG_META_PROFILE, organization.getMeta().getProfile().getFirst().getValue());
         assertEquals("The Health Centre", organization.getName());
         assertThat(organization.getIdentifier()).isEmpty();
         assertThat(organization.getTelecom()).isEmpty();
@@ -344,12 +369,12 @@ public class AgentDirectoryMapperTest {
         var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
-        var coding = practitionerRole.getCode().get(0).getCoding().get(0);
+        var coding = practitionerRole.getCode().getFirst().getCoding().getFirst();
 
         assertAll(
-                () -> assertEquals("1234", coding.getCode()),
-                () -> assertEquals("http://snomed.info/sct", coding.getSystem()),
-                () -> assertEquals("General practice", coding.getDisplay())
+            () -> assertEquals("1234", coding.getCode()),
+            () -> assertEquals("http://snomed.info/sct", coding.getSystem()),
+            () -> assertEquals("General practice", coding.getDisplay())
         );
     }
 
@@ -383,12 +408,12 @@ public class AgentDirectoryMapperTest {
 
         var agents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
         var practitionerRole = (PractitionerRole) agents.get(2);
-        var coding = practitionerRole.getCode().get(0).getCoding().get(0);
+        var coding = practitionerRole.getCode().getFirst().getCoding().getFirst();
 
         assertAll(
-                () -> assertEquals("1234", coding.getCode()),
-                () -> assertEquals("http://read.info/readv2", coding.getSystem()),
-                () -> assertEquals("General practice", coding.getDisplay())
+            () -> assertEquals("1234", coding.getCode()),
+            () -> assertEquals("http://read.info/readv2", coding.getSystem()),
+            () -> assertEquals("General practice", coding.getDisplay())
         );
     }
 
@@ -419,19 +444,19 @@ public class AgentDirectoryMapperTest {
         var mappedAgents = agentDirectoryMapper.mapAgentDirectory(agentDirectory);
 
         var practitionerRole = (PractitionerRole) mappedAgents.get(2);
-        var coding = practitionerRole.getCode().get(0).getCoding().get(0);
+        var coding = practitionerRole.getCode().getFirst().getCoding().getFirst();
 
         assertAll(
-                () -> assertEquals("1234", coding.getCode()),
-                () -> assertEquals("urn:oid:1.2.3.4.5.6", coding.getSystem()),
-                () -> assertEquals("Other person", coding.getDisplay())
+            () -> assertEquals("1234", coding.getCode()),
+            () -> assertEquals("urn:oid:1.2.3.4.5.6", coding.getSystem()),
+            () -> assertEquals("Other person", coding.getDisplay())
         );
     }
 
     private void assertAddress(Address address) {
         assertEquals(AddressUse.WORK, address.getUse());
         assertEquals(AddressType.PHYSICAL, address.getType());
-        assertEquals("234 ASHTREE ROAD", address.getLine().get(0).getValue());
+        assertEquals("234 ASHTREE ROAD", address.getLine().getFirst().getValue());
         assertEquals("LEEDS", address.getLine().get(1).getValue());
         assertEquals("YORKSHIRE", address.getLine().get(2).getValue());
         assertEquals("LS12 3RT", address.getPostalCode());
