@@ -1,7 +1,6 @@
 package uk.nhs.adaptors.pss.translator.mapper;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
@@ -9,7 +8,8 @@ import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.when;
 import static org.springframework.util.ResourceUtils.getFile;
 
-import static uk.nhs.adaptors.pss.translator.MetaFactory.MetaType.META_WITH_SECURITY;
+import static uk.nhs.adaptors.pss.translator.util.MetaUtil.MetaType.META_WITH_SECURITY;
+import static uk.nhs.adaptors.pss.translator.util.MetaUtil.assertMetaSecurityIsPresent;
 import static uk.nhs.adaptors.pss.translator.util.CompoundStatementResourceExtractors.extractAllCompoundStatements;
 import static uk.nhs.adaptors.pss.translator.util.XmlUnmarshallUtil.unmarshallFile;
 
@@ -19,7 +19,6 @@ import java.util.Optional;
 
 import org.apache.commons.lang3.StringUtils;
 import org.hl7.fhir.dstu3.model.CodeableConcept;
-import org.hl7.fhir.dstu3.model.Coding;
 import org.hl7.fhir.dstu3.model.DateTimeType;
 import org.hl7.fhir.dstu3.model.Encounter;
 import org.hl7.fhir.dstu3.model.Meta;
@@ -29,7 +28,6 @@ import org.hl7.fhir.dstu3.model.Patient;
 import org.hl7.fhir.dstu3.model.Period;
 import org.hl7.fhir.dstu3.model.Quantity;
 import org.hl7.fhir.dstu3.model.StringType;
-import org.hl7.fhir.dstu3.model.UriType;
 import org.hl7.v3.CV;
 import org.hl7.v3.RCMRMT030101UKComponent02;
 import org.hl7.v3.RCMRMT030101UKEhrComposition;
@@ -43,7 +41,7 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import lombok.SneakyThrows;
-import uk.nhs.adaptors.pss.translator.MetaFactory;
+import uk.nhs.adaptors.pss.translator.util.MetaUtil;
 import uk.nhs.adaptors.pss.translator.TestUtility;
 import uk.nhs.adaptors.pss.translator.service.ConfidentialityService;
 import uk.nhs.adaptors.pss.translator.util.DatabaseImmunizationChecker;
@@ -60,7 +58,6 @@ public class ObservationMapperTest {
     private static final String IDENTIFIER_SYSTEM = "https://PSSAdaptor/TESTPRACTISECODE";
     private static final String INTERPRETATION_SYSTEM = "http://hl7.org/fhir/v2/0078";
     private static final String CODING_DISPLAY_MOCK = "Test Display";
-    private static final String QUANTITY_SYSTEM = "http://unitsofmeasure.org";
     private static final String ISSUED_EHR_COMPOSITION_EXAMPLE = "2020-01-01T01:01:01.000+00:00";
     private static final String PPRF_PARTICIPANT_ID = "Practitioner/1230F602-6BB1-47E0-B2EC-39912A59787D";
     private static final String NEGATIVE_VALUE = "Negative";
@@ -83,7 +80,7 @@ public class ObservationMapperTest {
     private static final String EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT_WITH_ORIGINAL_TEXT =
             "{Episodicity : code=303350001, displayName=Ongoing, originalText=Review}";
     private static final String META_PROFILE = "Observation-1";
-    private static final Meta META = MetaFactory.getMetaFor(META_WITH_SECURITY, META_PROFILE);
+    private static final Meta META_WITH_SECURITY_ADDED = MetaUtil.getMetaFor(META_WITH_SECURITY, META_PROFILE);
     private static final CV NOPAT_CV = TestUtility.createCv(
         "NOPAT",
         "http://hl7.org/fhir/v3/ActCode",
@@ -122,22 +119,22 @@ public class ObservationMapperTest {
         when(confidentialityService.createMetaAndAddSecurityIfConfidentialityCodesPresent(
             META_PROFILE,
             ehrComposition.getConfidentialityCode(),
-            observationStatements.get(0).getConfidentialityCode(),
+            observationStatements.getFirst().getConfidentialityCode(),
             compoundStatement.getConfidentialityCode()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
         when(confidentialityService.createMetaAndAddSecurityIfConfidentialityCodesPresent(
             META_PROFILE,
             ehrComposition.getConfidentialityCode(),
             observationStatements.get(1).getConfidentialityCode(),
             compoundStatement.getConfidentialityCode()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
         var observations = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE);
 
         assertThat(observations).hasSize(2);
-        assertMetaSecurityIsPresent(observations.get(0).getMeta());
-        assertMetaSecurityIsPresent(observations.get(1).getMeta());
+        assertMetaSecurityIsPresent(META_WITH_SECURITY_ADDED, observations.getFirst().getMeta());
+        assertMetaSecurityIsPresent(META_WITH_SECURITY_ADDED, observations.get(1).getMeta());
     }
 
     @Test
@@ -155,11 +152,11 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             observationStatement.getConfidentialityCode(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
         var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
-        assertMetaSecurityIsPresent(observation.getMeta());
+        assertMetaSecurityIsPresent(META_WITH_SECURITY_ADDED, observation.getMeta());
     }
 
     @Test
@@ -174,11 +171,11 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             Optional.empty(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
-        assertMetaSecurityIsPresent(observation.getMeta());
+        assertMetaSecurityIsPresent(META_WITH_SECURITY_ADDED, observation.getMeta());
     }
 
     @Test
@@ -192,23 +189,23 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             observationStatement.getConfidentialityCode(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getId()).isEqualTo(EXAMPLE_ID);
         assertThat(observation.getEffective()).isInstanceOf(DateTimeType.class);
         assertThat(observation.getEffectiveDateTimeType().getValue()).isEqualTo("2019-07-08T13:35:00+00:00");
         assertThat(observation.getIssuedElement().asStringValue()).isEqualTo(ISSUED_EHR_COMPOSITION_EXAMPLE);
-        assertThat(observation.getPerformer().get(0).getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
+        assertThat(observation.getPerformer().getFirst().getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
         assertThat(observation.getValue()).isInstanceOf(Quantity.class);
         assertQuantity(observation.getValueQuantity(), QUANTITY_VALUE, "kilogram per square meter", "kg/m2");
         assertInterpretation(observation.getInterpretation(), "High", "H", "High");
         assertThat(observation.getComment()).isEqualTo("Subject: Uncle Test text 1");
-        assertThat(observation.getReferenceRange().get(0).getText()).isEqualTo("Age and sex based");
-        assertQuantity(observation.getReferenceRange().get(0).getLow(), REFERENCE_RANGE_LOW_VALUE, "liter", "L");
-        assertQuantity(observation.getReferenceRange().get(0).getHigh(), REFERENCE_RANGE_HIGH_VALUE, "liter", "L");
+        assertThat(observation.getReferenceRange().getFirst().getText()).isEqualTo("Age and sex based");
+        assertQuantity(observation.getReferenceRange().getFirst().getLow(), REFERENCE_RANGE_LOW_VALUE, "liter", "L");
+        assertQuantity(observation.getReferenceRange().getFirst().getHigh(), REFERENCE_RANGE_HIGH_VALUE, "liter", "L");
         assertTrue(observation.hasSubject());
     }
 
@@ -227,9 +224,9 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             observationStatement.getConfidentialityCode(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getComment()).isEqualTo(EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT);
@@ -249,9 +246,9 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             observationStatement.getConfidentialityCode(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getComment()).isEqualTo(EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT_WITH_ORIGINAL_TEXT);
@@ -267,9 +264,9 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             observationStatement.getConfidentialityCode(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getComment()).contains(EPISODICITY_WITH_ORIGINAL_TEXT_NOTE_TEXT_WITH_ORIGINAL_TEXT);
@@ -304,14 +301,14 @@ public class ObservationMapperTest {
             ehrComposition.getConfidentialityCode(),
             observationStatement.getConfidentialityCode(),
             Optional.empty()
-        )).thenReturn(META);
+        )).thenReturn(META_WITH_SECURITY_ADDED);
 
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertFixedValues(observation);
         assertThat(observation.getId()).isEqualTo(EXAMPLE_ID);
         assertThat(observation.getIssuedElement().asStringValue()).isEqualTo(ISSUED_EHR_COMPOSITION_EXAMPLE);
-        assertThat(observation.getPerformer().get(0).getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
+        assertThat(observation.getPerformer().getFirst().getReference()).isEqualTo(PPRF_PARTICIPANT_ID);
         assertNull(observation.getEffective());
         assertNull(observation.getValue());
         assertThat(observation.getInterpretation().getCoding()).isEmpty();
@@ -322,7 +319,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithValueStringUsingValueTypeST() {
         var ehrExtract = unmarshallEhrExtractElement("value_st_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getValue()).isInstanceOf(StringType.class);
         assertThat(observation.getValueStringType().getValue()).isEqualToIgnoringWhitespace(NEGATIVE_VALUE);
@@ -331,7 +328,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithValueStringUsingValueTypeCVOriginalText() {
         var ehrExtract = unmarshallEhrExtractElement("value_cv_display_name_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getValue()).isInstanceOf(StringType.class);
         assertThat(observation.getValueStringType().getValue()).isEqualTo(TEST_DISPLAY_VALUE);
@@ -340,7 +337,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithMultiplePertinentInformation() {
         var ehrExtract = unmarshallEhrExtractElement("multiple_pertinent_information_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo("Test text 1 Test text 2");
     }
@@ -348,7 +345,7 @@ public class ObservationMapperTest {
     @Test
     public void mapObservationWithCompositionIdMatchingEncounter() {
         var ehrExtract = unmarshallEhrExtractElement("ehr_composition_id_matching_encounter_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertTrue(observation.hasContext());
     }
@@ -357,7 +354,7 @@ public class ObservationMapperTest {
     public void mapObservationWithEffectiveDateTime() {
         var ehrExtract = unmarshallEhrExtractElement(
             "effective_date_time_type_using_effective_time_center.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertTrue(observation.getEffective() instanceof DateTimeType);
         assertThat(observation.getEffectiveDateTimeType().getValueAsString()).isEqualTo("2010-05-21");
@@ -367,7 +364,7 @@ public class ObservationMapperTest {
     public void mapObservationWithEffectivePeriod() {
         var ehrExtract = unmarshallEhrExtractElement(
             "effective_period_start_end_using_effective_time_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertTrue(observation.getEffective() instanceof Period);
         assertThat(observation.getEffectivePeriod().getStartElement().getValueAsString()).isEqualTo("2010-05-21");
@@ -386,7 +383,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Plus1SequenceComment_Expect_CommentMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_plus1__originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo(PLUS_ONE_ANNOTATION_TEXT);
     }
@@ -395,7 +392,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Minus1SequenceComment_Expect_CommentAndOriginalTextMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_minus1_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT;
 
@@ -406,7 +403,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Minus1AndPlus1SequenceComment_Expect_CommentsAndOriginalTextMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_plus1_minus1_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT + StringUtils.SPACE + PLUS_ONE_ANNOTATION_TEXT;
 
@@ -417,7 +414,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_ZeroSequenceAndPlus1SequenceComment_Expect_CommentsMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_plus1_zero_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = ZERO_ANNOTATION_TEXT + StringUtils.SPACE + PLUS_ONE_ANNOTATION_TEXT;
 
@@ -428,7 +425,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_ZeroSequenceComment_Expect_CommentMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_zero_originalText_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo(ZERO_ANNOTATION_TEXT);
     }
@@ -437,7 +434,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_Minus1SequenceCommentAndNoOriginalText_Expect_CommentMapped() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_minus1_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getComment()).isEqualTo(MINUS_ONE_ANNOTATION_TEXT);
     }
@@ -446,7 +443,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_With_AllSequenceCommentsAndOriginalText_Expect_MappedInCorrectOrder() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_all_observation.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT + StringUtils.SPACE + ZERO_ANNOTATION_TEXT
             + StringUtils.SPACE + PLUS_ONE_ANNOTATION_TEXT;
@@ -458,7 +455,7 @@ public class ObservationMapperTest {
     public void When_MapObservation_WithNullFlavorSequenceComments_Expect_CommentsPostFixed() {
         var ehrExtract = unmarshallEhrExtractElement(
             "sequence_comment_minus1_nullFlavor_originalText.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         var expectedComment = MINUS_ONE_ANNOTATION_TEXT + StringUtils.SPACE + ORIGINAL_TEXT + StringUtils.SPACE
             + NULL_FLAVOR_ANNOTATION_TEXT;
@@ -473,7 +470,7 @@ public class ObservationMapperTest {
         when(codeableConceptMapper.mapToCodeableConcept(any())).thenReturn(codeableConcept);
 
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getCode().getCodingFirstRep())
             .isEqualTo(DegradedCodeableConcepts.DEGRADED_OTHER);
@@ -486,7 +483,7 @@ public class ObservationMapperTest {
         lenient().when(codeableConceptMapper.mapToCodeableConcept(any())).thenReturn(codeableConcept);
 
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_observation_example.xml");
-        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).get(0);
+        var observation = observationMapper.mapResources(ehrExtract, patient, ENCOUNTER_LIST, PRACTISE_CODE).getFirst();
 
         assertThat(observation.getCode().getCodingFirstRep().getDisplay())
             .isEqualTo(CODING_DISPLAY_MOCK);
@@ -495,17 +492,17 @@ public class ObservationMapperTest {
     }
 
     private void assertFixedValues(Observation observation) {
-        assertThat(observation.getMeta().getProfile().get(0).getValue()).isEqualTo(META_PROFILE);
-        assertThat(observation.getIdentifier().get(0).getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
-        assertThat(observation.getIdentifier().get(0).getValue()).isEqualTo(EXAMPLE_ID);
+        assertThat(observation.getMeta().getProfile().getFirst().getValue()).isEqualTo(META_PROFILE);
+        assertThat(observation.getIdentifier().getFirst().getSystem()).isEqualTo(IDENTIFIER_SYSTEM);
+        assertThat(observation.getIdentifier().getFirst().getValue()).isEqualTo(EXAMPLE_ID);
         assertThat(observation.getStatus()).isEqualTo(ObservationStatus.FINAL);
     }
 
     private void assertInterpretation(CodeableConcept interpretation, String text, String code, String display) {
         assertThat(interpretation.getText()).isEqualTo(text);
-        assertThat(interpretation.getCoding().get(0).getCode()).isEqualTo(code);
-        assertThat(interpretation.getCoding().get(0).getDisplay()).isEqualTo(display);
-        assertThat(interpretation.getCoding().get(0).getSystem()).isEqualTo(INTERPRETATION_SYSTEM);
+        assertThat(interpretation.getCoding().getFirst().getCode()).isEqualTo(code);
+        assertThat(interpretation.getCoding().getFirst().getDisplay()).isEqualTo(display);
+        assertThat(interpretation.getCoding().getFirst().getSystem()).isEqualTo(INTERPRETATION_SYSTEM);
     }
 
     private void assertQuantity(Quantity quantity, BigDecimal value, String unit, String code) {
@@ -514,41 +511,26 @@ public class ObservationMapperTest {
         assertThat(quantity.getCode()).isEqualTo(code);
     }
 
-    private void assertMetaSecurityIsPresent(final Meta meta) {
-        final List<Coding> metaSecurity = meta.getSecurity();
-        final int metaSecuritySize = metaSecurity.size();
-        final Coding metaSecurityCoding = metaSecurity.get(0);
-        final UriType metaProfile = meta.getProfile().get(0);
-
-        assertAll(
-            () -> assertThat(metaSecuritySize).isEqualTo(1),
-            () -> assertThat(metaProfile.getValue()).isEqualTo(META_PROFILE),
-            () -> assertThat(metaSecurityCoding.getCode()).isEqualTo(NOPAT_CV.getCode()),
-            () -> assertThat(metaSecurityCoding.getDisplay()).isEqualTo(NOPAT_CV.getDisplayName()),
-            () -> assertThat(metaSecurityCoding.getSystem()).isEqualTo(NOPAT_CV.getCodeSystem())
-        );
-    }
-
     private RCMRMT030101UKEhrComposition getEhrComposition(RCMRMT030101UKEhrExtract ehrExtract) {
 
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
             .getEhrComposition();
     }
 
     private RCMRMT030101UKObservationStatement getObservationStatement(RCMRMT030101UKEhrExtract ehrExtract) {
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
-            .getEhrComposition().getComponent().get(0)
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
+            .getEhrComposition().getComponent().getFirst()
             .getObservationStatement();
     }
 
     private List<RCMRMT030101UKObservationStatement> getObservationStatementIncludedIntoCompoundStatement(
         RCMRMT030101UKEhrExtract ehrExtract) {
 
-        return ehrExtract.getComponent().get(0)
-            .getEhrFolder().getComponent().get(0)
-            .getEhrComposition().getComponent().get(0).getCompoundStatement().getComponent().stream()
+        return ehrExtract.getComponent().getFirst()
+            .getEhrFolder().getComponent().getFirst()
+            .getEhrComposition().getComponent().getFirst().getCompoundStatement().getComponent().stream()
             .filter(RCMRMT030101UKComponent02::hasObservationStatement)
             .map(RCMRMT030101UKComponent02::getObservationStatement)
             .toList();
