@@ -10,8 +10,10 @@ import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
 import static uk.nhs.adaptors.common.util.CodeableConceptUtils.createCodeableConcept;
+
 import static uk.nhs.adaptors.pss.translator.MetaFactory.MetaType.META_WITHOUT_SECURITY;
 import static uk.nhs.adaptors.pss.translator.MetaFactory.MetaType.META_WITH_SECURITY;
+
 import static uk.nhs.adaptors.pss.translator.util.XmlUnmarshallUtil.unmarshallFile;
 import static uk.nhs.adaptors.pss.translator.util.XmlUnmarshallUtil.unmarshallString;
 
@@ -21,6 +23,7 @@ import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Stream;
 
+import org.assertj.core.groups.Tuple;
 import org.hl7.fhir.dstu3.model.CodeableConcept;
 import org.hl7.fhir.dstu3.model.Coding;
 import org.hl7.fhir.dstu3.model.Encounter;
@@ -28,6 +31,7 @@ import org.hl7.fhir.dstu3.model.Meta;
 import org.hl7.fhir.dstu3.model.Patient;
 import org.hl7.fhir.dstu3.model.ReferralRequest;
 import org.hl7.fhir.dstu3.model.ReferralRequest.ReferralRequestStatus;
+import org.hl7.fhir.dstu3.model.ResourceType;
 import org.hl7.v3.CV;
 import org.hl7.v3.RCMRMT030101UKEhrComposition;
 import org.hl7.v3.RCMRMT030101UKEhrExtract;
@@ -49,6 +53,7 @@ import lombok.SneakyThrows;
 import uk.nhs.adaptors.pss.translator.FileFactory;
 import uk.nhs.adaptors.pss.translator.MetaFactory;
 import uk.nhs.adaptors.pss.translator.TestUtility;
+
 import uk.nhs.adaptors.pss.translator.service.ConfidentialityService;
 import uk.nhs.adaptors.pss.translator.util.DegradedCodeableConcepts;
 
@@ -69,8 +74,6 @@ class ReferralRequestMapperTest {
     private static final String UNEXPECTED_PRIORITY_DISPLAY = "Delayed priority";
     private static final String PRIORITY_NOTE_PREPENDAGE = "Priority: ";
     private static final String NOPAT = "NOPAT";
-
-    private static final String NOSCRUB = "NOSCRUB";
 
     private static final String TEST_DIRECTORY_NAME = "RequestStatement";
 
@@ -98,8 +101,14 @@ class ReferralRequestMapperTest {
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_with_referral_request.xml");
 
         var referralRequest = mapReferralRequest(ehrExtract,
-                                                 ehrExtract.getComponent().get(0).getEhrFolder().getComponent().get(0).getEhrComposition(),
-                                                 composition -> composition.getComponent().get(0).getRequestStatement());
+                                                 ehrExtract
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrFolder()
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrComposition(),
+                                                 composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
             () -> assertFixedValues(referralRequest),
@@ -107,8 +116,8 @@ class ReferralRequestMapperTest {
             () -> assertThat(referralRequest.getAuthoredOn()).isEqualTo("2020-11-17T13:30:32:00"),
             () -> assertEquals(PRACTITIONER_ID, referralRequest.getRequester().getAgent().getReference()),
             () -> assertEquals("Organization/9C3AB881-FCDE-48EC-8028-37B20E0AE893",
-                               referralRequest.getRecipient().get(0).getReference()),
-            () -> assertEquals("Reason Code 1", referralRequest.getReasonCodeFirstRep().getCoding().get(0).getDisplay())
+                               referralRequest.getRecipient().getFirst().getReference()),
+            () -> assertEquals("Reason Code 1", referralRequest.getReasonCodeFirstRep().getCoding().getFirst().getDisplay())
         );
     }
 
@@ -123,21 +132,27 @@ class ReferralRequestMapperTest {
         var ehrExtract = unmarshallEhrExtractElement("full_valid_data_example.xml");
 
         var referralRequest = mapReferralRequest(ehrExtract,
-                                                 ehrExtract.getComponent().get(0).getEhrFolder().getComponent().get(0).getEhrComposition(),
-                                                 composition -> composition.getComponent().get(0).getRequestStatement());
+                                                 ehrExtract
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrFolder()
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrComposition(),
+                                                 composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
-                () -> assertFixedValues(referralRequest),
-                () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
-                () -> assertEquals("Priority: Routine", referralRequest.getNote().get(0).getText()),
-                () -> assertEquals("Action Date: 2005-04-06", referralRequest.getNote().get(1).getText()),
-                () -> assertEquals("Test request statement text New line", referralRequest.getNote().get(2).getText()),
-                () -> assertThat(referralRequest.getAuthoredOn()).isEqualTo("2010-01-01T12:30:00+00:00"),
-                () -> assertEquals(PRACTITIONER_ID, referralRequest.getRequester().getAgent().getReference()),
-                () -> assertEquals("Practitioner/B8CA3710-4D1C-11E3-9E6B-010000001205",
-                                   referralRequest.getRecipient().get(0).getReference()),
-                () -> assertEquals("Reason Code 1", referralRequest.getReasonCodeFirstRep().getCoding().get(0).getDisplay()),
-                () -> assertEquals(ENCOUNTER_ID, referralRequest.getContext().getResource().getIdElement().getValue())
+            () -> assertFixedValues(referralRequest),
+            () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
+            () -> assertEquals("Priority: Routine", referralRequest.getNote().getFirst().getText()),
+            () -> assertEquals("Action Date: 2005-04-06", referralRequest.getNote().get(1).getText()),
+            () -> assertEquals("Test request statement text New line", referralRequest.getNote().get(2).getText()),
+            () -> assertThat(referralRequest.getAuthoredOn()).isEqualTo("2010-01-01T12:30:00+00:00"),
+            () -> assertEquals(PRACTITIONER_ID, referralRequest.getRequester().getAgent().getReference()),
+            () -> assertEquals("Practitioner/B8CA3710-4D1C-11E3-9E6B-010000001205",
+                               referralRequest.getRecipient().getFirst().getReference()),
+            () -> assertEquals("Reason Code 1", referralRequest.getReasonCodeFirstRep().getCoding().getFirst().getDisplay()),
+            () -> assertEquals(ENCOUNTER_ID, referralRequest.getContext().getResource().getIdElement().getValue())
         );
     }
 
@@ -158,15 +173,15 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         var referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
-                () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
-                () -> assertThat(referralRequest.getNote()).isEmpty(),
-                () -> assertNull(referralRequest.getAuthoredOn()),
-                () -> assertNull(referralRequest.getRequester().getAgent().getReference()),
-                () -> assertThat(referralRequest.getRecipient()).isEmpty(),
-                () -> assertThat(referralRequest.getReasonCode()).isEmpty()
+            () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
+            () -> assertThat(referralRequest.getNote()).isEmpty(),
+            () -> assertNull(referralRequest.getAuthoredOn()),
+            () -> assertNull(referralRequest.getRequester().getAgent().getReference()),
+            () -> assertThat(referralRequest.getRecipient()).isEmpty(),
+            () -> assertThat(referralRequest.getReasonCode()).isEmpty()
         );
     }
 
@@ -187,7 +202,7 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         ReferralRequest referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertNull(referralRequest.getContext().getResource());
     }
@@ -219,15 +234,15 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         ReferralRequest referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
-                () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
-                () -> assertThat(referralRequest.getNote()).isEmpty(),
-                () -> assertNull(referralRequest.getAuthoredOn()),
-                () -> assertEquals(PRACTITIONER_ID, referralRequest.getRequester().getAgent().getReference()),
-                () -> assertThat(referralRequest.getRecipient()).isEmpty(),
-                () -> assertThat(referralRequest.getReasonCode()).isEmpty()
+            () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
+            () -> assertThat(referralRequest.getNote()).isEmpty(),
+            () -> assertNull(referralRequest.getAuthoredOn()),
+            () -> assertEquals(PRACTITIONER_ID, referralRequest.getRequester().getAgent().getReference()),
+            () -> assertThat(referralRequest.getRecipient()).isEmpty(),
+            () -> assertThat(referralRequest.getReasonCode()).isEmpty()
         );
     }
 
@@ -258,15 +273,15 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         ReferralRequest referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
-                () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
-                () -> assertThat(referralRequest.getNote()).isEmpty(),
-                () -> assertNull(referralRequest.getAuthoredOn()),
-                () -> assertEquals(EHR_COMPOSITION_PRACTITIONER2_ID, referralRequest.getRequester().getAgent().getReference()),
-                () -> assertThat(referralRequest.getRecipient()).isEmpty(),
-                () -> assertThat(referralRequest.getReasonCode()).isEmpty()
+            () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
+            () -> assertThat(referralRequest.getNote()).isEmpty(),
+            () -> assertNull(referralRequest.getAuthoredOn()),
+            () -> assertEquals(EHR_COMPOSITION_PRACTITIONER2_ID, referralRequest.getRequester().getAgent().getReference()),
+            () -> assertThat(referralRequest.getRecipient()).isEmpty(),
+            () -> assertThat(referralRequest.getReasonCode()).isEmpty()
         );
     }
 
@@ -301,16 +316,22 @@ class ReferralRequestMapperTest {
         var ehrExtract = unmarshallStringToEhrExtractElement(inputXml);
 
         var referralRequest = mapReferralRequest(ehrExtract,
-                                                 ehrExtract.getComponent().get(0).getEhrFolder().getComponent().get(0).getEhrComposition(),
-                                                 composition -> composition.getComponent().get(0).getRequestStatement());
+                                                 ehrExtract
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrFolder()
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrComposition(),
+                                                 composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
-                () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
-                () -> assertThat(referralRequest.getNote()).isEmpty(),
-                () -> assertNull(referralRequest.getAuthoredOn()),
-                () -> assertNull(referralRequest.getRequester().getAgent().getReference()),
-                () -> assertThat(referralRequest.getRecipient()).isEmpty(),
-                () -> assertThat(referralRequest.getReasonCode()).isEmpty()
+            () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
+            () -> assertThat(referralRequest.getNote()).isEmpty(),
+            () -> assertNull(referralRequest.getAuthoredOn()),
+            () -> assertNull(referralRequest.getRequester().getAgent().getReference()),
+            () -> assertThat(referralRequest.getRecipient()).isEmpty(),
+            () -> assertThat(referralRequest.getReasonCode()).isEmpty()
         );
     }
 
@@ -334,15 +355,15 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         ReferralRequest referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertAll(
-                () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
-                () -> assertEquals("Priority: Normal", referralRequest.getNote().get(0).getText()),
-                () -> assertNull(referralRequest.getAuthoredOn()),
-                () -> assertNull(referralRequest.getRequester().getAgent().getReference()),
-                () -> assertThat(referralRequest.getRecipient()).isEmpty(),
-                () -> assertThat(referralRequest.getReasonCode()).isEmpty()
+            () -> assertEquals(EXAMPLE_ID, referralRequest.getId()),
+            () -> assertEquals("Priority: Normal", referralRequest.getNote().getFirst().getText()),
+            () -> assertNull(referralRequest.getAuthoredOn()),
+            () -> assertNull(referralRequest.getRequester().getAgent().getReference()),
+            () -> assertThat(referralRequest.getRecipient()).isEmpty(),
+            () -> assertThat(referralRequest.getReasonCode()).isEmpty()
         );
     }
 
@@ -367,9 +388,9 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         var referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
-        assertEquals(DegradedCodeableConcepts.DEGRADED_REFERRAL, referralRequest.getReasonCode().get(0).getCoding().get(0));
+        assertEquals(DegradedCodeableConcepts.DEGRADED_REFERRAL, referralRequest.getReasonCode().getFirst().getCoding().getFirst());
     }
 
     @ParameterizedTest
@@ -396,7 +417,7 @@ class ReferralRequestMapperTest {
         var ehrComposition = unmarshallStringToEhrCompositionElement(inputXml);
 
         var referralRequest = mapReferralRequest(null, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertThat(referralRequest.getPriority().getDisplay()).isEqualTo(expectedDisplay);
     }
@@ -416,8 +437,14 @@ class ReferralRequestMapperTest {
         var ehrExtract = unmarshallEhrExtractElement("request_statement_missing_priority_code.xml");
 
         var referralRequest = mapReferralRequest(ehrExtract,
-                                                 ehrExtract.getComponent().get(0).getEhrFolder().getComponent().get(0).getEhrComposition(),
-                                                 composition -> composition.getComponent().get(0).getRequestStatement());
+                                                 ehrExtract
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrFolder()
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrComposition(),
+                                                 composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertNull(referralRequest.getPriority());
     }
@@ -437,8 +464,14 @@ class ReferralRequestMapperTest {
         var ehrExtract = unmarshallEhrExtractElement("request_statement_unexpected_priority_code.xml");
 
         var referralRequest = mapReferralRequest(ehrExtract,
-                                                 ehrExtract.getComponent().get(0).getEhrFolder().getComponent().get(0).getEhrComposition(),
-                                                 composition -> composition.getComponent().get(0).getRequestStatement());
+                                                 ehrExtract
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrFolder()
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrComposition(),
+                                                 composition -> composition.getComponent().getFirst().getRequestStatement());
 
         assertNull(referralRequest.getPriority());
     }
@@ -449,8 +482,14 @@ class ReferralRequestMapperTest {
         var ehrExtract = unmarshallEhrExtractElement("request_statement_unexpected_priority_code.xml");
 
         var referralRequest = mapReferralRequest(ehrExtract,
-                                                 ehrExtract.getComponent().get(0).getEhrFolder().getComponent().get(0).getEhrComposition(),
-                                                 composition -> composition.getComponent().get(0).getRequestStatement());
+                                                 ehrExtract
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrFolder()
+                                                     .getComponent()
+                                                     .getFirst()
+                                                     .getEhrComposition(),
+                                                 composition -> composition.getComponent().getFirst().getRequestStatement());
 
         var priorityNotes = referralRequest.getNote()
             .stream()
@@ -464,7 +503,7 @@ class ReferralRequestMapperTest {
 
     @Test
     void When_MapToReferralRequest_With_NopatConfidentialityCode_Expect_MetaFromConfidentialityServiceWithSecurity() {
-        final Meta metaWithSecurity = MetaFactory.getMetaFor(META_WITH_SECURITY, META_PROFILE);
+        final Meta metaWithSecurity = MetaUtil.getMetaFor(META_WITH_SECURITY, META_PROFILE);
         final RCMRMT030101UKEhrExtract ehrExtract =
             unmarshallEhrExtractElement("full_valid_data_example_with_nopat_confidentiality_code.xml");
         final RCMRMT030101UKEhrComposition ehrComposition = TestUtility.getEhrComposition(ehrExtract);
@@ -476,11 +515,11 @@ class ReferralRequestMapperTest {
         )).thenReturn(metaWithSecurity);
 
         final ReferralRequest result = mapReferralRequest(ehrExtract, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         final CV confidentialityCode = confidentialityCodeCaptor
             .getAllValues()
-            .get(0) // ehrComposition.getConfidentialityCode()
+            .getFirst() // ehrComposition.getConfidentialityCode()
             .orElseThrow();
 
         assertAll(
@@ -492,7 +531,7 @@ class ReferralRequestMapperTest {
 
     @Test
     void When_MapToReferralRequest_With_NopatConfidentialityCodeWithinEhrComposition_Expect_MetaFromConfidentialityServiceWithSecurity() {
-        final Meta metaWithSecurity = MetaFactory.getMetaFor(META_WITH_SECURITY, META_PROFILE);
+        final Meta metaWithSecurity = MetaUtil.getMetaFor(META_WITH_SECURITY, META_PROFILE);
         final RCMRMT030101UKEhrExtract ehrExtract =
             unmarshallEhrExtractElement("full_valid_data_example_with_nopat_confidentiality_code_in_ehr_composition.xml");
         final RCMRMT030101UKEhrComposition ehrComposition = TestUtility.getEhrComposition(ehrExtract);
@@ -504,7 +543,7 @@ class ReferralRequestMapperTest {
         )).thenReturn(metaWithSecurity);
 
         final ReferralRequest result = mapReferralRequest(ehrExtract, ehrComposition,
-            composition -> composition.getComponent().get(0).getRequestStatement());
+            composition -> composition.getComponent().getFirst().getRequestStatement());
 
         final CV confidentialityCode = confidentialityCodeCaptor
             .getAllValues()
@@ -514,36 +553,76 @@ class ReferralRequestMapperTest {
         assertAll(
             () -> assertThat(result.getMeta()).usingRecursiveComparison().isEqualTo(metaWithSecurity),
             () -> assertThat(confidentialityCode.getCode()).isEqualTo(NOPAT),
-            () -> assertThat(confidentialityCodeCaptor.getAllValues().get(0)).isNotPresent()
+            () -> assertThat(confidentialityCodeCaptor.getAllValues().getFirst()).isNotPresent()
         );
+    }
+
+    @Test
+    void When_MappingReferralRequestReferencedByReferralRequestToExternalDocumentLinkSet_Expect_SupportingInfoReferencesLinksetDocuments() {
+        final RCMRMT030101UKEhrExtract ehrExtract = unmarshallEhrExtractElement(
+            "ResourceFilter",
+            "ehr_extract_with_referral_request_to_external_document_linkset.xml"
+        );
+
+        final var referralRequests = referralRequestMapper.mapResources(
+            ehrExtract,
+            (Patient) new Patient().setId(PATIENT_ID),
+            List.of(),
+            PRACTISE_CODE
+        );
+        final var referralRequest = referralRequests.getFirst();
+
+        assertThat(referralRequest.getSupportingInfo())
+            .extracting("referenceElement.resourceType", "referenceElement.idPart")
+            .containsExactly(
+                Tuple.tuple(ResourceType.DocumentReference.name(), "narrative-statement-1"),
+                Tuple.tuple(ResourceType.DocumentReference.name(), "narrative-statement-2")
+            );
+    }
+
+    @Test
+    void When_ReferralRequestReferencedByMultipleLinkSets_Expect_AllRelatedDocumentReferencesAddedAsSupportingInfo() {
+        final RCMRMT030101UKEhrExtract ehrExtract = unmarshallEhrExtractElement(
+            "ehr_extract_with_multiple_request_statement_to_external_document_linksets.xml"
+        );
+
+        final var referralRequests = referralRequestMapper.mapResources(
+            ehrExtract,
+            (Patient) new Patient().setId(PATIENT_ID),
+            List.of(),
+            PRACTISE_CODE
+        );
+
+        assertThat(referralRequests.getFirst().getSupportingInfo())
+            .extracting("referenceElement.resourceType", "referenceElement.idPart")
+            .containsExactly(
+                Tuple.tuple(ResourceType.DocumentReference.name(), "narrative-statement-1"),
+                Tuple.tuple(ResourceType.DocumentReference.name(), "narrative-statement-2"),
+                Tuple.tuple(ResourceType.DocumentReference.name(), "narrative-statement-3")
+            );
     }
 
     private RCMRMT030101UKRequestStatement getNestedRequestStatement(RCMRMT030101UKEhrComposition ehrComposition) {
         return ehrComposition.getComponent()
-            .get(0)
+            .getFirst()
             .getCompoundStatement()
             .getComponent()
             .get(1)
             .getCompoundStatement()
             .getComponent()
-            .get(0)
+            .getFirst()
             .getRequestStatement();
     }
 
     private void assertFixedValues(ReferralRequest referralRequest) {
         assertAll(
-                () -> assertThat(referralRequest.getMeta().getProfile().get(0).getValue())
-                        .isEqualTo(META_PROFILE),
-                () -> assertThat(referralRequest.getIdentifier().get(0).getSystem())
-                        .isEqualTo(IDENTIFIER_SYSTEM),
-                () -> assertThat(referralRequest.getIdentifier().get(0).getValue())
-                        .isEqualTo(EXAMPLE_ID),
-                () -> assertThat(referralRequest.getIntent())
-                        .isEqualTo(ReferralRequest.ReferralCategory.ORDER),
-                () -> assertThat(referralRequest.getStatus())
-                        .isEqualTo(ReferralRequestStatus.UNKNOWN),
-                () -> assertThat(referralRequest.getSubject().getResource().getIdElement().getValue())
-                        .isEqualTo(PATIENT_ID)
+            () -> assertThat(referralRequest.getMeta().getProfile().getFirst().getValue()).isEqualTo(META_PROFILE),
+            () -> assertThat(referralRequest.getIdentifier().getFirst().getSystem()).isEqualTo(IDENTIFIER_SYSTEM),
+            () -> assertThat(referralRequest.getIdentifier().getFirst().getValue()).isEqualTo(EXAMPLE_ID),
+            () -> assertThat(referralRequest.getIntent()).isEqualTo(ReferralRequest.ReferralCategory.ORDER),
+            () -> assertThat(referralRequest.getStatus()).isEqualTo(ReferralRequestStatus.UNKNOWN),
+            () -> assertThat(referralRequest.getSubject().getResource().getIdElement().getValue())
+                .isEqualTo(PATIENT_ID)
         );
     }
 
@@ -566,6 +645,7 @@ class ReferralRequestMapperTest {
                 requestStatement,
                 patient,
                 List.of(encounter),
+                List.of(),
                 PRACTISE_CODE);
     }
 
@@ -589,9 +669,16 @@ class ReferralRequestMapperTest {
 
     @SneakyThrows
     private RCMRMT030101UKEhrExtract unmarshallEhrExtractElement(String fileName) {
-        final File file = FileFactory.getXmlFileFor(TEST_DIRECTORY_NAME, fileName);
+        return unmarshallEhrExtractElement(TEST_DIRECTORY_NAME, fileName);
+    }
+
+    @SneakyThrows
+    private RCMRMT030101UKEhrExtract unmarshallEhrExtractElement(String testDirectory, String fileName) {
+        final File file = FileFactory.getXmlFileFor(testDirectory, fileName);
         return unmarshallFile(file, RCMRMT030101UKEhrExtract.class);
     }
+
+
 
     @SneakyThrows
     private RCMRMT030101UKEhrExtract unmarshallStringToEhrExtractElement(String inputXml) {
@@ -603,6 +690,6 @@ class ReferralRequestMapperTest {
             eq(META_PROFILE),
             confidentialityCodeCaptor.capture(),
             confidentialityCodeCaptor.capture()
-        )).thenReturn(MetaFactory.getMetaFor(META_WITHOUT_SECURITY, META_PROFILE));
+        )).thenReturn(MetaUtil.getMetaFor(META_WITHOUT_SECURITY, META_PROFILE));
     }
 }
